[project]
name = "call-analyzer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "openai-whisper",
    "gspread",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "python-dotenv",
    "requests",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
